Fix background spacing of /music-reviews intro

--- a/assets/sass/components/_music-review.scss
+++ b/assets/sass/components/_music-review.scss
@@ -114,7 +114,7 @@
     position: relative;
 
     .background {
-        top: -5.5rem;
+        top: -6.5rem;
         height: calc(100% + 8.5rem);
 
         @include breakpoint-down(desktop) {
